--- a/menu.css
+++ b/menu.css
@@ -61,7 +61,7 @@ header{
 }
 
 
-@media screen and (max-width: 550px){
+@media screen and (max-width: 700px){
     .abrir-menu,
     .cerrar-menu{
         display: block;
@@ -98,5 +98,10 @@ header{
         font-size: 1rem;
         text-align: end;
         margin-right: -80;
+    }
+    body.active .nav{
+        color:chartreuse;
+        background-color: rbg(127,255,0,0);
+        border: solid 1px chartreuse;
     }
 }
