--- a/estilos.css
+++ b/estilos.css
@@ -174,12 +174,13 @@ p.primerP{
 
 
 #boton{
+    display: block;
     background-color:rgba(120, 59, 8, 3);
    border-radius: 8px;
    text-decoration: none;
    color: aliceblue;
    padding: 5px;
-   margin-bottom: 15px;
+   margin-bottom: 25px;
    font-size: 20px;
 
    
